# qTox

./: .clang-tidy  .dockerignore  .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  cspell.config.yaml  doxygen.conf  errors.txt  netlify.toml  pvs analyze exit: 
.github/workflows/: appimage.yml  asan.yml  build-package.yml  build-test-deploy.yml  ci.yml  clang-tidy.yml  codeql.yml  coverity-scan.yml  draft.yml  flatpak.yml  freebsd.yml  macos.yml  release.yml
appimage/: build.sh
cmake/: ClangTidy.cmake  Dependencies.cmake  Installation.cmake
cmake/warnings/: CMakeLists.txt
docs/: INSTALL.md
flatpak/: build.sh
packaging/: create-deb.sh  create-rpm.sh
packaging/wasm/: build.sh
platform/flatpak/: io.github.qtox.qTox.json
platform/freebsd/: MANIFEST.template
platform/linux/: io.github.qtox.qTox.appdata.xml
platform/macos/: Info.plist
platform/windows/: qtox64.nsi
scripts/: run-clang-tidy  update-versions.sh
src/: BUILD.bazel  appmanager.cpp  appmanager.h  conferencelist.cpp  ipc.cpp  ipc.h
src/audio/: BUILD.bazel  CMakeLists.txt
src/audio/include/audio/: iaudiosink.h
src/audio/src/backend/: alsink.h  openal.cpp  openal.h
src/chatlog/: chatline.cpp  chatlinecontentproxy.h  chatlinestorage.cpp  chatlinestorage.h  chatmessage.cpp  chatmessage.h  chatwidget.cpp  chatwidget.h  textformatter.cpp
src/chatlog/content/: filetransferwidget.cpp  filetransferwidget.h  spinner.cpp  spinner.h
src/core/: chatid.h  core.cpp  coreav.cpp  coreav.h  corefile.cpp  corefile.h  dhtserver.h  toxcall.cpp  toxcall.h  toxencrypt.cpp  toxfile.cpp  toxfile.h  toxfileprogress.cpp  toxid.cpp  toxlogger.cpp  toxoptions.cpp  toxoptions.h  toxstring.cpp
src/model/: chathistory.cpp  chatlogitem.cpp  chatlogitem.h  conference.cpp  conference.h  conferencemessagedispatcher.cpp  exiftransform.cpp  exiftransform.h  friendmessagedispatcher.cpp  friendmessagedispatcher.h  message.cpp  message.h  notificationgenerator.cpp  sessionchatlog.cpp  sessionchatlog.h  systemmessage.h  toxclientstandards.h
src/model/chatroom/: conferenceroom.cpp  friendchatroom.cpp
src/model/debug/: debuglogmodel.cpp  debuglogmodel.h  debugobjecttreemodel.cpp
src/model/profile/: profileinfo.cpp
src/net/: avatarbroadcaster.cpp  avatarbroadcaster.h  bootstrapnodeupdater.cpp  updateversion.cpp  updateversion.h
src/persistence/: globalsettingsupgrader.cpp  history.cpp  history.h  offlinemsgengine.cpp  paths.cpp  personalsettingsupgrader.cpp  profile.cpp  profile.h  profilelocker.cpp  profilelocker.h  serialize.cpp  settings.cpp  settings.h  settingsserializer.cpp  settingsserializer.h  smileypack.cpp
src/persistence/db/: rawdatabase.h  rawdatabaseimpl.cpp  rawdatabaseimpl.h
src/persistence/db/upgrades/: dbto11.cpp  dbupgrader.cpp
src/platform/: autorun_xdg.cpp  capslock_osx.cpp  capslock_x11.cpp  posixsignalnotifier.cpp  stacktrace.cpp  stacktrace.h  timer_osx.cpp  timer_x11.cpp  x11_display.h
src/platform/camera/: avfoundation.mm  v4l2.cpp  v4l2.h
src/platform/desktop_notifications/: desktopnotifybackend.h  desktopnotifybackend_dbus.cpp
src/util/include/util/: strongtype.h
src/util/src/: display.cpp  network.cpp  toxcoreerrorparser.cpp
src/video/: cameradevice.cpp  cameradevice.h  camerasource.cpp  camerasource.h  corevideosource.cpp  netcamview.cpp  netcamview.h  scopedavdictionary.cpp  scopedavdictionary.h  videoframe.cpp  videoframe.h  videomode.cpp  videosurface.cpp  videosurface.h
src/widget/: categorywidget.cpp  chatformheader.cpp  circlewidget.cpp  conferencewidget.cpp  contentdialog.cpp  contentdialog.h  contentdialogmanager.cpp  contentdialogmanager.h  contentlayout.cpp  contentlayout.h  emoticonswidget.cpp  flowlayout.cpp  friendlistwidget.cpp  friendwidget.cpp  genericchatitemlayout.cpp  genericchatroomwidget.cpp  notificationscrollarea.cpp  passwordedit.cpp  qrwidget.cpp  qrwidget.h  style.cpp  translator.cpp  widget.cpp  widget.h
src/widget/form/: addfriendform.cpp  chatform.cpp  conferenceform.cpp  conferenceform.h  debugwidget.cpp  debugwidget.h  filesform.cpp  genericchatform.cpp  genericchatform.h  profileform.cpp  setpassworddialog.cpp  setpassworddialog.h  settingswidget.cpp  settingswidget.h  tabcompleter.cpp
src/widget/form/settings/: aboutform.cpp  aboutform.h  advancedform.cpp  avform.cpp  avform.h  generalform.cpp  privacyform.cpp  textcompose.cpp  textcompose.h  userinterfaceform.cpp  userinterfaceform.h
src/widget/tool/: callconfirmwidget.cpp  chattextedit.cpp  flyoutoverlaywidget.cpp  flyoutoverlaywidget.h  identicon.cpp  identicon.h  messageboxmanager.cpp  movablewidget.cpp  movablewidget.h  profileimporter.cpp  profileimporter.h  screengrabberchooserrectitem.cpp  screengrabberoverlayitem.cpp  screenshotgrabber.cpp
test/: BUILD.bazel
test/chatlog/: chatlinestorage_test.cpp  chatwidget_test.cpp
test/mock/include/mock/: mockbootstraplistgenerator.h  mockcoreidhandler.h
test/model/: friendlistmanager_test.cpp  sessionchatlog_test.cpp
test/persistence/: dbschema_test.cpp
