load("@rules_cc//cc:defs.bzl", "cc_library")
load("//third_party/qt:build_defs.bzl", "qt_moc", "qt_rcc")

qt_moc(
    name = "audio_moc",
    srcs = [
        "include/audio/iaudiocontrol.h",
        "include/audio/iaudiosource.h",
        "src/backend/alsink.h",
        "src/backend/alsource.h",
        "src/backend/openal.h",
    ],
    hdrs = glob(["**/*.h"]),
    mocopts = ["-Iqtox/src/audio/include"],
    tags = ["qt"],
    deps = ["//qtox/src/util"],
)

qt_rcc(
    name = "audio_res",
    srcs = ["resources/audio_res.qrc"],
    data = glob(["resources/*.pcm"]),
    tags = ["qt"],
)

cc_library(
    name = "audio_res_lib",
    srcs = [":audio_res"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
    alwayslink = True,
)

cc_library(
    name = "audio",
    srcs = [
        ":audio_moc",
    ] + glob(
        [
            "src/**/*.cpp",
        ],
    ),
    hdrs = glob(["**/*.h"]),
    copts = ["-Iqtox"] + select({
        "//scripts/config:freebsd": [],
        "//scripts/config:linux": ["-fPIC"],
        "//scripts/config:osx": [],
        "//scripts/config:windows": [],
    }),
    defines = [
        "DEBUG",
        "QTOX_PLATFORM_EXT",
        "QT_MESSAGELOGCONTEXT",
        "UPDATE_CHECK_ENABLED",
    ],
    includes = ["include"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
    deps = [
        ":audio_res_lib",
        "//qtox/src/util",
        "@openal",
        "@qt//:qt_core",
    ],
)
